mold 서비스 시작 후, 자체시험 실행 전 모니터링 서비스 재시작 명령 실행하도록 추가